--- a/edu-381-mobx/src/App.css
+++ b/edu-381-mobx/src/App.css
@@ -1,38 +1,35 @@
 .App {
-  text-align: center;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.counter{
+  border: gray 2px solid;
+  padding: 20px 10px;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  font-size: 25px;
+ }
+.btns {
+
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+  height: 50px;
+  width: 50px;
+  background: goldenrod;
+  font-size: 25px;
+  font-weight: bold;
+  border-radius: 50%;
+  border: none;
+  margin-top: 10px;
 }
+ button{
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ }
